NoRef added margin to section-screenlet-content to fix the squished-sections look everywhere
git-svn-id: svn://data.ilscipio.com/ilscipio/ofbiz_foundation/trunk@7482 55bbc10b-e964-4c8f-a844-a62c6f7d3c80

--- a/framework/images/webapp/images/styles/base/scss/_base.scss
+++ b/framework/images/webapp/images/styles/base/scss/_base.scss
@@ -246,6 +246,13 @@ ul {
     }
 }
 
+div.section-screenlet {
+    //margin-bottom: 10px;
+}
+div.section-screenlet-content {
+    // add to this one so margin can combine with content's margins
+    margin-bottom: 1rem;
+}
 
 /*  FOOTER */
 #body-content {
