--- a/framework/images/webapp/images/styles/base/stylesheets/app.css
+++ b/framework/images/webapp/images/styles/base/stylesheets/app.css
@@ -9820,25 +9820,30 @@ ul.chart-legend {
   list-style: none;
 }
 
+/* line 252, ../scss/_base.scss */
+div.section-screenlet-content {
+  margin-bottom: 1rem;
+}
+
 /*  FOOTER */
-/* line 251, ../scss/_base.scss */
+/* line 258, ../scss/_base.scss */
 #body-content {
   min-height: 100%;
   margin-bottom: -26px;
 }
 
-/* line 256, ../scss/_base.scss */
+/* line 263, ../scss/_base.scss */
 #body-content:after {
   content: "";
   display: block;
 }
 
-/* line 261, ../scss/_base.scss */
+/* line 268, ../scss/_base.scss */
 #body-content:after, #footer {
   height: 26px;
 }
 
-/* line 265, ../scss/_base.scss */
+/* line 272, ../scss/_base.scss */
 #footer {
   background: #333333;
   color: #eeeeee;
@@ -9846,35 +9851,35 @@ ul.chart-legend {
 }
 
 /*MISC*/
-/* line 275, ../scss/_base.scss */
+/* line 282, ../scss/_base.scss */
 .progress .meter {
   transition-duration: 3s;
 }
 
-/* line 280, ../scss/_base.scss */
+/* line 287, ../scss/_base.scss */
 .button-group .text-entry {
   padding-left: 1em;
   padding-right: 1em;
 }
 
-/* line 286, ../scss/_base.scss */
+/* line 293, ../scss/_base.scss */
 .form-field-input-asterisk {
   display: none;
 }
 
 @media only screen and (min-width: 40.0625em) and (max-width: 64em) {
-  /* line 293, ../scss/_base.scss */
+  /* line 300, ../scss/_base.scss */
   input, select, text-area {
     max-width: 100%;
   }
 }
 @media only screen and (max-width: 40em) {
-  /* line 298, ../scss/_base.scss */
+  /* line 305, ../scss/_base.scss */
   input, select, text-area {
     max-width: 100%;
   }
 
-  /* line 300, ../scss/_base.scss */
+  /* line 307, ../scss/_base.scss */
   .login-box {
     min-width: 0;
   }
